Fixed mobile nav spacing

--- a/styles/_mobile.scss
+++ b/styles/_mobile.scss
@@ -32,10 +32,11 @@
         align-items: center;
         border-radius: 0.4rem;
         position: absolute;
+        line-height: 1.3;
         padding: 1.625rem 0;
-        top: 8vh;
+        top: 3rem;
         right: 2.3rem;
-        height: 30vh;
+        // height: 30vh;
         background-color: #ffffff;
         width: 80%;
         transform: translateY(-30rem);
