--- a/styles/style.css
+++ b/styles/style.css
@@ -548,10 +548,10 @@ footer {
             align-items: center;
     border-radius: 0.4rem;
     position: absolute;
+    line-height: 1.3;
     padding: 1.625rem 0;
-    top: 8vh;
+    top: 3rem;
     right: 2.3rem;
-    height: 30vh;
     background-color: #ffffff;
     width: 80%;
     -webkit-transform: translateY(-30rem);
